--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Research Portfolio</title>
     <link rel="stylesheet" href="assets/style.css">
     <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
-    <script type="text/javascript" src="//cdn.plu.mx/widget-all.js"></script>
+    <script type="text/javascript" src="//cdn.plu.mx/widget-popup.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>My Publications</h1>
-            <p>Synced with Google Scholar ID: _-tb2Y8AAAAJ</p>
+            <h1> Hari Pavan Sriram Yalamati Publications</h1>
+            <p><center>Catalysis and Hydrogen Research Lab,<br> Department of Petroleum Engineering, <br>School of energy Technology, <br>Pandit Deedayal Energy University, <br>Gandhinagar, Gujarat</center></p>
         </header>
         <main id="paper-list">
             <p class="loading">Loading research data...</p>
