--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1> Hari Pavan Sriram Yalamati Publications</h1>
+            <h1><center>Hari Pavan Sriram Yalamati Publications</center></h1>
             <p><center>Catalysis and Hydrogen Research Lab,<br> Department of Petroleum Engineering, <br>School of energy Technology, <br>Pandit Deedayal Energy University, <br>Gandhinagar, Gujarat</center></p>
         </header>
         <main id="paper-list">
