--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <header>
-            <h1><center>Hari Pavan Sriram Yalamati Publications</center></h1>
-            <p><center>Catalysis and Hydrogen Research Lab,<br> Department of Petroleum Engineering, <br>School of energy Technology, <br>Pandit Deedayal Energy University, <br>Gandhinagar, Gujarat</center></p>
+            <h1><center>Hari Pavan Sriram Yalamati's Publications</center></h1>
+            <p><center>Catalysis and Hydrogen Research Lab,<br> Department of Petroleum Engineering, <br>School of energy Technology, <br>Pandit Deedayal Energy University, <br>Gandhinagar, Gujarat-382007</center></p>
         </header>
         <main id="paper-list">
             <p class="loading">Loading research data...</p>
