--- a/index.html
+++ b/index.html
@@ -3,18 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Portfolio</title>
+    
+    <title>Hari Pavan Sriram Yalamati | Research Portfolio | PDEU</title>
+    <meta name="description" content="Official research portfolio of Hari Pavan Sriram Yalamati. Exploring Catalysis and Hydrogen Research at Pandit Deendayal Energy University (PDEU).">
+    <meta name="keywords" content="Hari Pavan Sriram Yalamati, Petroleum Engineering, Catalysis, Hydrogen Research, PDEU, School of Energy Technology">
+    <meta name="author" content="Hari Pavan Sriram Yalamati">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Hari Pavan Sriram Yalamati - Research Publications">
+    <meta property="og:description" content="Publications and research contributions in Petroleum Engineering and Catalysis.">
+
     <link rel="stylesheet" href="assets/style.css">
-    <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
-    <script type="text/javascript" src="//cdn.plu.mx/widget-popup.js"></script>
+    
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Hari Pavan Sriram Yalamati",
+      "jobTitle": "Researcher",
+      "affiliation": {
+        "@type": "EducationalOrganization",
+        "name": "Pandit Deendayal Energy University"
+      },
+      "url": "https://research.haripavan.com",
+      "description": "Researcher at Catalysis and Hydrogen Research Lab, Department of Petroleum Engineering, School Of Energy University, Pandit Deendayal Energy Univesity"
+    }
+    </script>
+
+    <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js' async></script>
+    <script type="text/javascript" src="//cdn.plu.mx/widget-popup.js" async></script>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1><center>Hari Pavan Sriram Yalamati's Publications</center></h1>
-            <p><center>Catalysis and Hydrogen Research Lab,<br> Department of Petroleum Engineering, <br>School of energy Technology, <br>Pandit Deedayal Energy University, <br>Gandhinagar, Gujarat-382007</center></p>
+            <h1>Hari Pavan Sriram Yalamati's Publications</h1>
+            <address>
+                Catalysis and Hydrogen Research Lab<br> 
+                Department of Petroleum Engineering<br> 
+                School of Energy Technology<br> 
+                <strong>Pandit Deendayal Energy University</strong><br> 
+                Gandhinagar, Gujarat - 382007
+            </address>
         </header>
+
         <main id="paper-list">
+            <noscript>
+                <p>Please enable JavaScript to view my research publications in Petroleum Engineering and Hydrogen Research.</p>
+            </noscript>
             <p class="loading">Loading research data...</p>
         </main>
     </div>
