--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="a389f311-8ac0-4f11-ac25-e72700ebf1d4"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -36,14 +37,28 @@
 <body>
     <div class="container">
         <header>
-            <h1>Hari Pavan Sriram Yalamati's Publications</h1>
-            <address>
+            <h1><center>Hari Pavan Sriram Yalamati's Publications</center></h1><br>
+            <center><address>
                 Catalysis and Hydrogen Research Lab<br> 
                 Department of Petroleum Engineering<br> 
                 School of Energy Technology<br> 
                 <strong>Pandit Deendayal Energy University</strong><br> 
                 Gandhinagar, Gujarat - 382007
-            </address>
+            </address></center>
+            <div class="profile-buttons">
+                <a href="https://scholar.google.com/citations?user=_-tb2Y8AAAAJ&hl=en&oi=ao" target="_blank" class="profile-btn scholar-btn">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" class="btn-logo">
+                    Google Scholar
+                </a>
+                <a href="https://www.scopus.com/authid/detail.uri?authorId=58401099600" target="_blank" class="profile-btn scopus-btn">
+                    <img src="https://www.scopus.com/static/proteus-images/favicon.ico" alt="Scopus" class="btn-logo">
+                    Scopus Profile
+                </a>
+                <a href="https://orcid.org/my-orcid?orcid=0000-0002-2003-2769" target="_blank" class="profile-btn orcid-btn">
+                    <img src="https://orcid.org/assets/vectors/orcid.logo.icon.svg" alt="ORCID" class="btn-logo">
+                    ORCID
+                </a>
+            </div>
         </header>
 
         <main id="paper-list">
