--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="https://www.scopus.com/static/proteus-images/favicon.ico" alt="Scopus" class="btn-logo">
                     Scopus Profile
                 </a>
-                <a href="https://orcid.org/my-orcid?orcid=0000-0002-2003-2769" target="_blank" class="profile-btn orcid-btn">
+                <a href="https://orcid.org/0000-0002-2003-2769" target="_blank" class="profile-btn orcid-btn">
                     <img src="https://orcid.org/assets/vectors/orcid.logo.icon.svg" alt="ORCID" class="btn-logo">
                     ORCID
                 </a>
